--- a/src/index.css
+++ b/src/index.css
@@ -61,8 +61,22 @@ nav a:hover {
 .plant {
     max-width: 2rem;
     max-height: 2rem;
-    margin-top: 6rem;
     margin-bottom: 1rem;
+}
+
+.right-col-container {
+    text-align: center;
+    padding: 50px 0;
+}
+
+.right-col-container h1 {
+    font-size: 1.5rem;
+    margin-bottom: 3.2rem;
+}
+
+.right-col-container h2 {
+    margin-top: 2rem;
+    font-weight: lighter;
 }
 
 .home-body {
@@ -85,28 +99,14 @@ nav a:hover {
     color:#595c3f;
 }
 
-.row :nth-child(2) {
-    text-align: center;
-}
-
-.row :nth-child(2) h1 {
-    margin-bottom: 4rem;
-}
-
-.row :nth-child(2) h2 {
-    margin-top: 2.6rem;
-    font-weight: lighter;
-}
-
-.row :nth-child(2) .btn-default {
-    margin-top: 4.2rem;
+.container-fluid h2 {
+    font-size: 0.95rem;
 }
 
 .col .btn-light {
     background-color:#595c3f;
     color: #F0F7F1;
-    margin-top: 4rem;
-    font-size: 1.4rem;
+    margin-top: 2.2rem;
     font-weight: 200;
 }
 
@@ -119,7 +119,7 @@ nav a:hover {
 .about-text {
     padding-top: 2rem;
     height: 100vh;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 
 .about-text h2 {
