--- a/src/index.css
+++ b/src/index.css
@@ -61,22 +61,8 @@ nav a:hover {
 .plant {
     max-width: 2rem;
     max-height: 2rem;
+    margin-top: 6rem;
     margin-bottom: 1rem;
-}
-
-.right-col-container {
-    text-align: center;
-    padding: 50px 0;
-}
-
-.right-col-container h1 {
-    font-size: 1.5rem;
-    margin-bottom: 3.2rem;
-}
-
-.right-col-container h2 {
-    margin-top: 2rem;
-    font-weight: lighter;
 }
 
 .home-body {
@@ -99,14 +85,28 @@ nav a:hover {
     color:#595c3f;
 }
 
-.container-fluid h2 {
-    font-size: 0.95rem;
+.row :nth-child(2) {
+    text-align: center;
+}
+
+.row :nth-child(2) h1 {
+    margin-bottom: 4rem;
+}
+
+.row :nth-child(2) h2 {
+    margin-top: 2.6rem;
+    font-weight: lighter;
+}
+
+.row :nth-child(2) .btn-default {
+    margin-top: 4.2rem;
 }
 
 .col .btn-light {
     background-color:#595c3f;
     color: #F0F7F1;
-    margin-top: 2.2rem;
+    margin-top: 4rem;
+    font-size: 1.4rem;
     font-weight: 200;
 }
 
@@ -119,7 +119,7 @@ nav a:hover {
 .about-text {
     padding-top: 2rem;
     height: 100vh;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 .about-text h2 {
@@ -246,11 +246,7 @@ footer a:hover {
 /* Explore Page */
 
 .explore-heading {
-    font-size: 2rem;
-}
-
-.explore-subheading {
-    font-size: 1rem;
+    font-size: 3em;
 }
 
 .explore-body {
@@ -266,14 +262,20 @@ footer a:hover {
     gap: 2rem;
 }
 
+.explore-item {
+    width: 32%;     
+}
+
 .explore-item img {
-    width: 10rem;
-    height: 10rem;
+    max-width: auto;
 }
 
 .explore-item h3 {
     font-size: 1.5rem;
+    padding-left: 4rem;
+    padding-right: 4rem;
     padding-top: 1.8rem;
+    padding-bottom: 1.8rem;
     text-align: center;
 }
 
@@ -283,27 +285,22 @@ cite {
 }
 
 .search-bar {
+    margin-left: 6rem;
     font-size: 1.5rem;
     align-self: center;
 }
 
 .explore-body {
-    padding: 4rem;
+    padding: 3rem;
 }
 
-.form-select {
-    margin-top: 2rem;
-    margin-right: 2rem;
+/* #maintenanceSelect {
+    margin: 3rem;
 }
 
-.btn-secondary {
-    margin-top: 2rem;
-}
-
-.mb-3 .col-auto {
-    display: flex;
-    justify-content: space-between;
-}
+#submitButton {
+    margin-left: auto;
+} */
 
 /* Calendar Page */
 
@@ -367,12 +364,7 @@ th, td, .water-text, .soil, .fertilizer {
 /* Calendar Event */
 
 .modal {
-    position: fixed;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -380,17 +372,12 @@ th, td, .water-text, .soil, .fertilizer {
 
 .modal-content {
     width: 500px;
+    height: 290px;
     background-color: #fff;
-}
-
-.modal-header {
-    padding-top: 10px;
-    position: fixed;
-    top: 220px;
-}
-
-.modal-header button {
-    float: right;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .modal-body {
@@ -400,14 +387,12 @@ th, td, .water-text, .soil, .fertilizer {
 .close-btn {
     cursor: pointer;
     position: absolute;
-    right: 1.5rem;
-    top: 1rem;
+    right: .5rem;
+    top: 0.5rem;
     width: 30px;
     height: 30px;
     color: black;
     font-size: 25px;
-    line-height: 30px;
-    text-align: center;
 }
 
 .add-event:visited ~ .calendar-Event {
@@ -416,7 +401,6 @@ th, td, .water-text, .soil, .fertilizer {
 
 .form-title {
     margin: 0;
-    padding: 0.75rem;
 }
 
 .card-container .form-item {
@@ -430,45 +414,6 @@ th, td, .water-text, .soil, .fertilizer {
 .form-item {
     padding-bottom: 0.75rem;
 }
-
-/* .popup .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.7);
-    z-index: 1;
-    display: none;
-}
-
-.popup .content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: #fff;
-    width: 550px;
-    height: 275px;
-    z-index: 2;
-    padding-bottom: 1rem;
-    padding-left: 1rem;
-    background-color: #787C53;
-}
-
-.popup .close-btn {
-    position: absolute;
-    right: 1.5rem;
-    top: 1rem;
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-    color: #fff;
-    font-size: 25px;
-    line-height: 30px;
-    text-align: center;
-    border-radius: 50%;
-} */
 
 .modal .close-btn:hover {
     color: rgb(143, 0, 0)
@@ -499,23 +444,23 @@ th, td, .water-text, .soil, .fertilizer {
       left: 50%;
       transform: translate(-50%,-50%);
       padding: 20px 35px;
-    } 
+  } 
 
-    .quiz-contain button {
+  .quiz-contain button {
       padding: 10px 15px;
       font-size: 15px;
-    }
+  }
 
-    .new-event {
-        bottom: -160px;
-        right: -180px;
-    }
+  .new-event {
+    bottom: -160px;
+    right: -180px;
+}
 
-    .button-text {
-        position: absolute;
-        bottom: -169px;
-        right: -300px;
-    }
+.button-text {
+    position: absolute;
+    bottom: -169px;
+    right: -300px;
+}
 }
 
 @media (min-width: 768px) {
@@ -530,7 +475,19 @@ th, td, .water-text, .soil, .fertilizer {
 
     /* Explore Page */
 
+    .explore-heading {
+        padding-top: 4rem;
+        padding-left: 4rem;
+        margin: 2rem;
+    }
+
+    .explore-subheading {
+        padding-left: 4rem;
+        margin: 2rem;
+    }
+
     .explore-container {
+        display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-around;
@@ -538,10 +495,6 @@ th, td, .water-text, .soil, .fertilizer {
 
     .search-bar {
         padding-right: 10rem;
-    }
-
-    .explore-item {
-        width: 26%;     
     }
 
     /* Calendar Page */
@@ -613,36 +566,30 @@ th, td, .water-text, .soil, .fertilizer {
     .search-bar {
         padding-right: 28rem;
     }
-    .explore-heading {
-        font-size: 2.4rem;
-    }
-    
-    .explore-subheading {
-        font-size: 1.5rem;
-    }
 
-    /* Home Page */
+    /*Home Page
 
     .plant {
-        max-width: 3.2rem;
-        max-height: 3.2rem;
+        max-width: 4rem;
+        max-height: 4rem;
+        margin-top: 8.2rem;
         margin-bottom: 1.5rem;
     }
 
     .col .btn-light {
-        font-size: 1.4rem;
+        font-size: 2rem;
     }
 
     .col .btn-light:last-child {
         margin-left: 1rem;
     }
 
-    .right-col-container h1 {
-        font-size: 2.4rem;
+    .row :nth-child(2) h1 {
+        font-size: 3rem;
     }
 
-    .right-col-container h2 {
-        font-size: 1.5rem;
-        margin-top: 3rem;
-    } 
+    .row :nth-child(2) h2 {
+        font-size: 2rem;
+        margin-top: 6rem;
+    } */
 } 
