--- a/src/index.css
+++ b/src/index.css
@@ -246,7 +246,11 @@ footer a:hover {
 /* Explore Page */
 
 .explore-heading {
-    font-size: 3em;
+    font-size: 2rem;
+}
+
+.explore-subheading {
+    font-size: 1rem;
 }
 
 .explore-body {
@@ -262,20 +266,14 @@ footer a:hover {
     gap: 2rem;
 }
 
-.explore-item {
-    width: 32%;     
-}
-
 .explore-item img {
-    max-width: auto;
+    width: 10rem;
+    height: 10rem;
 }
 
 .explore-item h3 {
     font-size: 1.5rem;
-    padding-left: 4rem;
-    padding-right: 4rem;
     padding-top: 1.8rem;
-    padding-bottom: 1.8rem;
     text-align: center;
 }
 
@@ -285,22 +283,29 @@ cite {
 }
 
 .search-bar {
-    margin-left: 6rem;
     font-size: 1.5rem;
     align-self: center;
 }
 
 .explore-body {
-    padding: 3rem;
+    padding: 4rem;
 }
 
-/* #maintenanceSelect {
-    margin: 3rem;
+.form-select {
+    margin-top: 2rem;
+    margin-right: 2rem;
 }
 
-#submitButton {
-    margin-left: auto;
-} */
+.btn-secondary {
+    margin-top: 2rem;
+}
+
+.mb-3 .col-auto {
+    display: flex;
+    justify-content: space-between;
+}
+
+
 
 /* Calendar Page */
 
@@ -429,29 +434,28 @@ th, td, .water-text, .soil, .fertilizer {
 
 
 @media (min-width: 320px) {
-
     /* Quiz Result Page */
-
+    
     .plant-picture img {
         display: none;
-    }
+}
 
-    /* Quiz Page */
+/* Quiz Page */
 
-    .quiz-contain {
-      position: absolute;
-      top: 70%;
-      left: 50%;
-      transform: translate(-50%,-50%);
-      padding: 20px 35px;
-  } 
+.quiz-contain {
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  padding: 20px 35px;
+} 
 
-  .quiz-contain button {
-      padding: 10px 15px;
-      font-size: 15px;
-  }
+.quiz-contain button {
+  padding: 10px 15px;
+  font-size: 15px;
+}
 
-  .new-event {
+.new-event {
     bottom: -160px;
     right: -180px;
 }
@@ -461,6 +465,41 @@ th, td, .water-text, .soil, .fertilizer {
     bottom: -169px;
     right: -300px;
 }
+
+ /* Calendar Page */
+ table {
+    width: 30rem;
+    height: 30rem;
+}
+.new-event {
+    bottom: -150px;
+    right: -35px;
+}
+
+.button-text {
+    position: absolute;
+    bottom: -160px;
+    right: -160px;
+}
+}
+
+@media (min-width: 576px) {
+    /* Calendar Page */
+    table {
+        width: 35rem;
+        height: 35rem;
+    }
+    .new-event {
+        bottom: -160px;
+        right: 135px;
+    }
+    
+    .button-text {
+        position: absolute;
+        bottom: -170px;
+        right: 10px;
+    }
+    
 }
 
 @media (min-width: 768px) {
@@ -475,19 +514,7 @@ th, td, .water-text, .soil, .fertilizer {
 
     /* Explore Page */
 
-    .explore-heading {
-        padding-top: 4rem;
-        padding-left: 4rem;
-        margin: 2rem;
-    }
-
-    .explore-subheading {
-        padding-left: 4rem;
-        margin: 2rem;
-    }
-
     .explore-container {
-        display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-around;
@@ -497,11 +524,15 @@ th, td, .water-text, .soil, .fertilizer {
         padding-right: 10rem;
     }
 
+    .explore-item {
+        width: 26%;     
+    }
+
     /* Calendar Page */
 
     table {
-        width: 60rem;
-        height: 45rem;
+        width: 48rem;
+        height: 35rem;
     }
 
     th, td, .water-text, .soil, .fertilizer {
@@ -509,14 +540,14 @@ th, td, .water-text, .soil, .fertilizer {
     }
 
     .new-event {
-        bottom: -270px;
-        right: 75px;
+        bottom: -250px;
+        right: 130px;
     }
     
     .button-text {
         position: absolute;
-        bottom: -280px;
-        right: -50px;
+        bottom: -260px;
+        right: 5px;
     }
 
 
@@ -567,29 +598,50 @@ th, td, .water-text, .soil, .fertilizer {
         padding-right: 28rem;
     }
 
-    /*Home Page
+    .explore-heading {
+        font-size: 2.4rem;
+    }
+    
+    .explore-subheading {
+        font-size: 1.5rem;
+    }
 
+    /* Home Page */
+    
     .plant {
-        max-width: 4rem;
-        max-height: 4rem;
-        margin-top: 8.2rem;
+        max-width: 3.2rem;
+        max-height: 3.2rem;
         margin-bottom: 1.5rem;
     }
 
     .col .btn-light {
-        font-size: 2rem;
+        font-size: 1.4rem;
     }
 
     .col .btn-light:last-child {
         margin-left: 1rem;
     }
 
-    .row :nth-child(2) h1 {
-        font-size: 3rem;
+    .right-col-container h1 {
+        font-size: 2.4rem;
     }
 
-    .row :nth-child(2) h2 {
-        font-size: 2rem;
-        margin-top: 6rem;
-    } */
-} 
+    .right-col-container h2 {
+        font-size: 1.5rem;
+        margin-top: 3rem;
+    } 
+
+    /* Calendar Page */
+    .new-event {
+        bottom: -245px;
+        right: 30px;
+    }
+    
+    .button-text {
+        position: absolute;
+        bottom: -255px;
+        right: 210px;
+    }
+
+
+}
