--- a/src/index.css
+++ b/src/index.css
@@ -305,8 +305,6 @@ cite {
     justify-content: space-between;
 }
 
-
-
 /* Calendar Page */
 
 .month-name {
@@ -351,8 +349,8 @@ th, td {
     position: absolute;
     bottom: -50px;
     right: 3px;
+    margin-right: 2rem;
 }
-
 
 th, td, .water-text, .soil, .fertilizer {
     font-size: .8rem;
@@ -438,49 +436,38 @@ th, td, .water-text, .soil, .fertilizer {
     
     .plant-picture img {
         display: none;
-}
+    }
 
-/* Quiz Page */
+    /* Quiz Page */
 
-.quiz-contain {
-  position: absolute;
-  top: 70%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  padding: 20px 35px;
-} 
-
-.quiz-contain button {
-  padding: 10px 15px;
-  font-size: 15px;
-}
-
-.new-event {
-    bottom: -160px;
-    right: -180px;
-}
-
-.button-text {
+    .quiz-contain {
     position: absolute;
-    bottom: -169px;
-    right: -300px;
-}
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    padding: 20px 35px;
+    } 
 
- /* Calendar Page */
- table {
-    width: 30rem;
-    height: 30rem;
-}
-.new-event {
-    bottom: -150px;
-    right: -35px;
-}
+    .quiz-contain button {
+    padding: 10px 15px;
+    font-size: 15px;
+    }
 
-.button-text {
-    position: absolute;
-    bottom: -160px;
-    right: -160px;
-}
+    /* Calendar Page */
+    table {
+        width: 30rem;
+        height: 30rem;
+    }
+
+    .new-event {
+        bottom: -100px;
+    }
+
+    .button-text {
+        position: absolute;
+        bottom: -110px;
+        margin-right: -1rem;
+    }
 }
 
 @media (min-width: 576px) {
@@ -490,14 +477,13 @@ th, td, .water-text, .soil, .fertilizer {
         height: 35rem;
     }
     .new-event {
-        bottom: -160px;
+        bottom: -60px;
         right: 135px;
     }
     
     .button-text {
         position: absolute;
-        bottom: -170px;
-        right: 10px;
+        bottom: -70px;
     }
     
 }
@@ -540,14 +526,12 @@ th, td, .water-text, .soil, .fertilizer {
     }
 
     .new-event {
-        bottom: -250px;
-        right: 130px;
+        bottom: -150px;
     }
     
     .button-text {
         position: absolute;
-        bottom: -260px;
-        right: 5px;
+        bottom: -160px;
     }
 
 
@@ -578,14 +562,12 @@ th, td, .water-text, .soil, .fertilizer {
 @media (min-width: 960px) {
     /* Calendar Page */
     .new-event {
-        bottom: -305px;
-        right: 130px;
+        bottom: -190px;
     }
     
     .button-text {
         position: absolute;
-        bottom: -315px;
-        right: 10px;
+        bottom: -200px;
     }
 
 }
@@ -633,14 +615,12 @@ th, td, .water-text, .soil, .fertilizer {
 
     /* Calendar Page */
     .new-event {
-        bottom: -245px;
-        right: 30px;
+        bottom: -40px;
     }
     
     .button-text {
-        position: absolute;
-        bottom: -255px;
-        right: 210px;
+        bottom: -50px;
+        right: 30px;
     }
 
 
