--- a/src/index.css
+++ b/src/index.css
@@ -211,18 +211,18 @@ footer a:hover {
 
     /* Dimensions  */
     width: 70%; /* Can be in percentage also. */
-    padding: 4rem;
     background-color: #A0A66F;
-    padding: 10rem;
+    padding: 8rem;
     border-radius: 16px;
     color: white;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px,
     rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+    text-align: center;
 }
 
 .quiz-question-container .btn {
-    margin-right: 2rem;
-    font-size: 1.5rem;
+    margin-right: 1.5rem;
+    font-size: 1rem;
 }
 
 .quiz-question-container .btn:last-child {
@@ -235,13 +235,13 @@ footer a:hover {
 
 .questionText {
     color: white;
-    font-size: 2rem;
-    font-weight: bold;
-    text-align: center;
+    font-size: 1.5rem;
 }
 
-.answers {
-    text-align: center;
+.question-count {
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+    font-weight: bold;
 }
 
 .question {
