--- a/src/index.css
+++ b/src/index.css
@@ -331,6 +331,20 @@ cite {
 }
 
 /* Calendar Page */
+.react-calendar__navigation {
+    padding-top: 1rem;
+    text-align: center;
+}
+
+abbr[title] {
+    text-decoration: none;
+    cursor:default;
+}
+
+.react-calendar__month-view__weekdays__weekday {
+    text-align: center;
+    padding-top: 0.5rem;
+}
 
 .month-name {
     text-align: center;
