--- a/src/index.css
+++ b/src/index.css
@@ -331,9 +331,22 @@ cite {
 }
 
 /* Calendar Page */
+.calendar {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+}
 .react-calendar__navigation {
     padding-top: 1rem;
     text-align: center;
+    font-size: 1.25rem;
+}
+
+.react-calendar__navigation button {
+    background-color: white;
+}
+
+.react-calendar__navigation button:hover {
+    background-color: #9c9898;
 }
 
 abbr[title] {
@@ -343,14 +356,26 @@ abbr[title] {
 
 .react-calendar__month-view__weekdays__weekday {
     text-align: center;
-    padding-top: 0.5rem;
+    font-size: 1.25rem;
+    padding-top: 1rem;
+    font-weight: bold;
 }
 
-.month-name {
+.react-calendar__tile {
+    padding-top: 0.5rem;
+    padding-bottom: 4.75rem;
+    background-color: white;
+}
+
+.react-calendar__tile:hover {
+    background-color: #A0A66F;
+}
+/* .month-name {
     text-align: center;
     padding-top: .5rem;
-}
-table {
+} */
+
+/* table {
     margin-right: auto;
     margin-left: auto;
     table-layout: fixed;
@@ -368,7 +393,7 @@ td {
 
 th, td {
     text-align: center;
-}
+} */
 
 .new-event {
     text-align: center;
@@ -391,17 +416,17 @@ th, td {
     margin-right: 2rem;
 }
 
-th, td, .water-text, .soil, .fertilizer {
+/* th, td, .water-text, .soil, .fertilizer {
     font-size: .8rem;
-}
+} */
 
-.water-text {
+/* .water-text {
     background-color:  #A0A66F;
 }
 
 .soil, .fertilizer {
     background-color: #A98467;
-}
+} */
 
 /* Calendar Event */
 
