--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ h3 {
     font-size: 1rem;
 }
 
-.btn-default {
+.col .btn {
     background-color: #595c3f;
     color:#FFF;
     border-color: #595c3f;
