--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,9 @@ body {
     font-size: 16px;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     font-family: 'Nunito Sans', Helvetica, sans-serif;
     font-weight: 300;
 }
@@ -33,15 +35,15 @@ h3 {
 
 .col .btn {
     background-color: #595c3f;
-    color:#FFF;
+    color: #FFF;
     border-color: #595c3f;
-    margin-top: 2rem; 
+    margin-top: 2rem;
 }
 
 .btn-default {
     background-color: #595c3f;
-    color:#FFF;
-    margin-top: 2rem; 
+    color: #FFF;
+    margin-top: 2rem;
 }
 
 /* Nav Bar Styling */
@@ -64,7 +66,7 @@ nav a:hover {
 
 .color-Nav Button {
     margin-right: .4rem;
-    color:#595c3f;
+    color: #595c3f;
 }
 
 /* Home Page */
@@ -81,18 +83,18 @@ nav a:hover {
 }
 
 #backdrop-container {
-    display:none;
+    display: none;
     height: 100vh;
 }
 
 .container-fluid {
     background-color: #F0F7F1;
-    color:#595c3f;
+    color: #595c3f;
     height: 100vh;
 }
 
 .container-fluid h1 {
-    color:#595c3f;
+    color: #595c3f;
 }
 
 .right-col-container {
@@ -111,15 +113,26 @@ nav a:hover {
 }
 
 .col .btn-light {
-    background-color:#595c3f;
+    background-color: #595c3f;
     color: #F0F7F1;
     margin-top: 4rem;
     font-size: 1.4rem;
     font-weight: 200;
 }
 
-.col .btn-light:hover{
-    background-color:#A0A66F;
+.col .btn-light:hover {
+    background-color: #A0A66F;
+}
+
+/* Plant Info */
+
+.care-info em {
+    font-weight: bold;
+    font-style: normal;
+}
+
+h1.plant-info-heading {
+    text-align: center;
 }
 
 /* About Page */
@@ -136,7 +149,7 @@ nav a:hover {
 }
 
 .about-body {
-    background-color:#F0F7F1;
+    background-color: #F0F7F1;
 }
 
 footer {
@@ -166,7 +179,9 @@ footer a:hover {
 
 /* Quiz Page */
 
-.quiz-body, .calendar-body, .calendar-event-body {
+.quiz-body,
+.calendar-body,
+.calendar-event-body {
     background-color: #A0A66F;
     height: 100vh;
 }
@@ -175,30 +190,30 @@ footer a:hover {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     color: white;
     text-align: center;
 }
 
 .quiz-template-body .btn-light {
     color: #595c3f;
-} 
+}
 
 .quiz-contain {
     position: absolute;
     top: 60%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     padding: 20px 35px;
 }
 
 .quiz-contain .mobile-start {
     display: none;
-}   
+}
 
 .quiz-contain .big-start {
     color: #595c3f;
-    color: #787C53 ;
+    color: #787C53;
     background-color: transparent;
     text-decoration: none;
 }
@@ -216,13 +231,14 @@ footer a:hover {
     margin-top: 4rem;
 
     /* Dimensions  */
-    width: 70%; /* Can be in percentage also. */
+    width: 70%;
+    /* Can be in percentage also. */
     background-color: #A0A66F;
     padding: 8rem;
     border-radius: 16px;
     color: white;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px,
-    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+        rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
     text-align: center;
 }
 
@@ -236,7 +252,7 @@ footer a:hover {
 }
 
 .quiz-question-container .btn:hover {
-    background-color:#bcbfa3;
+    background-color: #bcbfa3;
 }
 
 .questionText {
@@ -411,7 +427,7 @@ cite {
     font-size: 25px;
 }
 
-.add-event:visited ~ .calendar-Event {
+.add-event:visited~.calendar-Event {
     display: inline-block;
 }
 
@@ -444,8 +460,24 @@ cite {
 }
 
 @media (min-width: 320px) {
+    /* Plant Info */
+
+    .plant-info-img img {
+        max-height: 240px;
+        max-width: 240px;
+        padding: 1rem;
+        border: 6px solid #c69f6c;
+        border-radius: 70px;
+        margin-bottom: 20px;
+    }
+
+    .care-info h2 {
+        text-align: center;
+    }
+
+
     /* Quiz Result Page */
-    
+
     .plant-picture img {
         display: none;
     }
@@ -453,16 +485,16 @@ cite {
     /* Quiz Page */
 
     .quiz-contain {
-    position: absolute;
-    top: 70%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    padding: 20px 35px;
-    } 
+        position: absolute;
+        top: 70%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 20px 35px;
+    }
 
     .quiz-contain button {
-    padding: 10px 15px;
-    font-size: 15px;
+        padding: 10px 15px;
+        font-size: 15px;
     }
 
     /* Calendar Page */
@@ -483,21 +515,31 @@ cite {
 }
 
 @media (min-width: 576px) {
+
     /* Calendar Page */
     table {
         width: 35rem;
         height: 35rem;
     }
+
     .new-event {
         bottom: -60px;
         right: 135px;
     }
-    
+
     .button-text {
         position: absolute;
         bottom: -70px;
     }
-    
+
+    /* Plant Info */
+    .plant-info-img img {
+        padding: 1rem;
+        border: 6px solid #c69f6c;
+        border-radius: 70px;
+    }
+
+
 }
 
 @media (min-width: 768px) {
@@ -511,6 +553,13 @@ cite {
     }
 
     /* Explore Page */
+
+    .plant-img img {
+        width: 90%;
+        height: 90%;
+        margin: auto;
+        display: block;
+    }
 
     .explore-container {
         flex-direction: row;
@@ -526,8 +575,8 @@ cite {
         /* width: 26%; */
         /* display: flex; */
         width: 16rem;
-        background-color: #C4A484;  
-        border-radius: 25px;   
+        background-color: #E5DDCF;
+        border-radius: 25px;
         max-width: 100%;
     }
 
@@ -553,7 +602,7 @@ cite {
     .new-event {
         bottom: -150px;
     }
-    
+
     .button-text {
         position: absolute;
         bottom: -160px;
@@ -567,30 +616,41 @@ cite {
         margin-left: 1rem;
         padding: 3rem;
     }
-    
-    .plant-img img {
+
+    .plant-info-img img {
         width: 90%;
         height: auto;
-        max-width: 700px;
-        max-height: 700px;
-        margin-left: 1rem;
-        margin-right: 1rem;
+        max-width: 500px;
+        max-height: 500px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
         text-align: center;
-        /* padding: 1.5rem; */
+        padding: 1.5rem;
+        border: 7px solid #c69f6c;
+        border-radius: 90px;
     }
-    
+
     .care-info {
-        margin: 1rem;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
         padding: 3rem;
     }
+
+    .care-info {
+        padding-top: 0;
+    }
+
 }
 
 @media (min-width: 960px) {
+
     /* Calendar Page */
     .new-event {
         bottom: -190px;
     }
-    
+
     .button-text {
         position: absolute;
         bottom: -200px;
@@ -601,7 +661,7 @@ cite {
 @media (min-width: 1200px) {
 
     /* Explore Page */
-    
+
     .search-bar {
         padding-right: 28rem;
     }
@@ -609,13 +669,13 @@ cite {
     .explore-heading {
         font-size: 2.4rem;
     }
-    
+
     .explore-subheading {
         font-size: 1.5rem;
     }
 
     /* Home Page */
-    
+
     .plant {
         max-width: 3.2rem;
         max-height: 3.2rem;
@@ -637,16 +697,39 @@ cite {
     .right-col-container h2 {
         font-size: 1.5rem;
         margin-top: 2rem;
-    } 
+    }
 
     /* Calendar Page */
     .new-event {
         bottom: -40px;
     }
-    
+
     .button-text {
         bottom: -50px;
         right: 30px;
+    }
+
+    /* Plant Info Page */
+
+    .plant-info-img img {
+        max-width: 600px;
+        max-height: 600px;
+    }
+    .care-info {
+        font-size: 1.5rem;
+    }
+
+    .plant-info-heading {
+        font-size: 3rem;
+    }
+    .care-info h2 {
+        margin-bottom: 2rem;
+        font-size: 1.8rem;
+
+    }
+
+    .care-info {
+        padding-top: 0;
     }
 
 
