--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@ nav a:hover {
     transition: .25s ease-in-out;
 }
 
-.color-Nav Button {
+.navbar-nav .btn {
     margin-right: .4rem;
     color: #595c3f;
 }
