--- a/src/index.css
+++ b/src/index.css
@@ -38,11 +38,8 @@ p {
     font-weight: 200;
 }
 
-.col .btn {
-    background-color: #595c3f;
-    color: #FFF;
-    border-color: #595c3f;
-    margin-top: 2rem;
+.sign-in {
+    font-size: 1.4rem;
 }
 
 .btn-default {
@@ -146,14 +143,21 @@ h1.plant-info-heading {
 /* About Page */
 
 .about-text {
-    padding-top: 2rem;
+    padding-top: 2.8rem;
     height: 100vh;
-    font-size: 1rem;
+}
+
+.about-text h1 {
+    font-size: 2.4rem;
 }
 
 .about-text h2 {
     padding-top: 2.8rem;
     font-weight: bold;
+}
+
+.about-text p {
+    font-size: 1.2rem;
 }
 
 .about-body {
