--- a/src/index.css
+++ b/src/index.css
@@ -392,12 +392,7 @@ cite {
     padding-top: 50px;
 }
 
-.add-event {
-    padding-left: 2rem;
-}
-
 .event-date {
-    margin-right: 10px;
     margin-top: 5px;
 }
 
@@ -427,79 +422,13 @@ cite {
 }
 
 .add-event {
-    margin-right: 85%;
+    text-align: center;
     background-color: #A0A66F;
-    padding: 2rem;
-    margin-left: 2rem;
+    width: min-content;
+    padding: 3.2rem;
     border-radius: 16px;
     color: white;
     box-shadow: rgb(50 50 93 / 25%) 0px 30px 60px -12px, rgb(0 0 0 / 30%) 0px 18px 36px -18px;
-}
-
-/* Calendar Event */
-
-.modal {
-    background-color: rgba(0, 0, 0, 0.7);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.modal-content {
-    width: 500px;
-    height: 290px;
-    background-color: #fff;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.modal-body {
-    padding: 10px;
-}
-
-.close-btn {
-    cursor: pointer;
-    position: absolute;
-    right: .5rem;
-    top: 0.5rem;
-    width: 30px;
-    height: 30px;
-    color: black;
-    font-size: 25px;
-}
-
-.add-event:visited~.calendar-Event {
-    display: inline-block;
-}
-
-.form-title {
-    margin: 0;
-}
-
-.card-container .form-item {
-    padding-bottom: 0.5rem;
-}
-
-.card-container {
-    background-color: #787C53;
-}
-
-.form-item {
-    padding-bottom: 0.75rem;
-}
-
-.modal .close-btn:hover {
-    color: rgb(143, 0, 0)
-}
-
-.form-btn-type button:hover {
-    background-color: #9c9898;
-}
-
-.form-btn-type button:last-child {
-    margin-left: 1rem;
 }
 
 @media (min-width: 320px) {
@@ -516,6 +445,10 @@ cite {
 
     .care-info h2 {
         text-align: center;
+    }
+
+    .add-event {
+        margin: 0 auto;
     }
 
     /* Quiz Result Page */
@@ -549,7 +482,9 @@ cite {
         border-radius: 70px;
     }
 
-
+    .add-event {
+        margin-left: 2rem;
+    }
 }
 
 @media (min-width: 768px) {
