--- a/src/index.css
+++ b/src/index.css
@@ -559,6 +559,13 @@ cite {
     .care-info {
         padding-top: 0;
     }
+    
+    /* Quiz Result Pages */
+    .quiz-img-column {
+        float: left;
+        width: 33.33%;
+        padding: 5px;
+    }
 
 }
 
@@ -577,6 +584,13 @@ cite {
     .search-bar {
         font-size: 1.5rem;
         align-self: center;
+    }
+
+    /* Quiz Result Pages */
+    .quiz-img-column {
+        float: left;
+        width: 33.33%;
+        padding: 5px;
     }
 
 }
@@ -657,7 +671,9 @@ cite {
     }
 
     /* Quiz Result Pages */
-    .quiz-img {
-        
+    .quiz-img-column {
+        float: left;
+        width: 33.33%;
+        padding: 5px;
     }
 }
